# schema-gen

./: .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml  renovate.json  requirements-dev.txt  sources.yaml
.claude/: CLAUDE.md
.github/workflows/: extract.yaml  publish.yaml  test.yaml
docs/ai-context/: ARCHITECTURE.md  CONVENTIONS.md  DOMAIN.md  README.md  WORKFLOWS.md
public/: index.html
schemas/: sources.schema.json
schemas/acid.zalan.do/v1/: operatorconfiguration.json  postgresql.json  postgresteam.json
schemas/acm.aws.crossplane.io/v1alpha1/: certificate.json
schemas/acm.aws.crossplane.io/v1beta1/: certificate.json
schemas/acme.cert-manager.io/v1/: challenge.json  order.json
schemas/acme.cert-manager.io/v1alpha2/: challenge.json  order.json
schemas/acme.cert-manager.io/v1alpha3/: challenge.json  order.json
schemas/acme.cert-manager.io/v1beta1/: challenge.json  order.json
schemas/acmpca.aws.crossplane.io/v1alpha1/: certificateauthority.json  certificateauthoritypermission.json
schemas/acmpca.aws.crossplane.io/v1beta1/: certificateauthority.json  certificateauthoritypermission.json
schemas/actions.github.com/v1alpha1/: autoscalinglistener.json  autoscalingrunnerset.json  ephemeralrunner.json  ephemeralrunnerset.json
schemas/addons.cluster.x-k8s.io/v1alpha3/: clusterresourceset.json  (+1 more)
scripts/: backfill.py  common.py  dedupe.py  detect_changes.py  extract.py  extract_helmfile.py  generate_index.py  import_datree.py  migrate_sources.py
tests/: __init__.py  conftest.py  test_common.py  test_extract.py  test_schema_validation.py
(+1606 files in other folders)
